syntax="proto3";

package kubernetes;

option go_package="protos/protos";

import "generalView.proto";

message PodDetail {
  string name = 1;
  string namespace = 2;
}


service Scheduler {
  rpc Schedule(PodDetail) returns (Empty) {}
}
